--- a/src/java/Makefile
+++ b/src/java/Makefile
@@ -18,10 +18,10 @@
 #   -classpath : repertoire dans lequel sont cherches les .class deja compiles
 #   -sourcepath : repertoire dans lequel sont cherchés les .java (dependances)
 
-all: resto exeResto
+all: Resto exeResto
 
-resto:
-	javac -d bin -classpath  -sourcepath src:src/VueResto:src/ModeleResto:src/ControleurResto src/Resto.java
+Resto:
+	javac -d bin -sourcepath src:src/* src/Resto.java
 
 # Execution:
 # on peut taper directement la ligne de commande :
@@ -30,8 +30,7 @@ resto:
 #   > make exeIHM
 
 exeResto:
-	java -classpath bin:bin/* resto
+	java -classpath bin:bin/* Resto
 
 clean:
-	rm -rf bin/*.class
-	rm -rf src/*.class
+	rm -rf bin/*
