Corrige accès à la BD

--- a/src/java/Makefile
+++ b/src/java/Makefile
@@ -37,3 +37,6 @@ documentation:
 	
 clean:
 	rm -rf bin/*.class
+	rm -rf ControleurResto/*.class
+	rm -rf ModeleResto/*.class
+	rm -rf VueResto/*.class
