--- a/src/java/Makefile
+++ b/src/java/Makefile
@@ -37,7 +37,7 @@ exeRestoText:
 	java -classpath bin:bin/* RestoText
 
 documentation:
-	javadoc -encoding utf8 -d doc -sourcepath src/ -subpackages . 	
+	javadoc -encoding utf8 -docencoding utf8 -charset utf8 -d doc -sourcepath src/ -subpackages . 	
 clean:
 	rm -rf bin/*.class
 	rm -rf ControleurResto/*.class
